--- a/Expense-Tracker/style.css
+++ b/Expense-Tracker/style.css
@@ -252,6 +252,7 @@ button:hover{
     background-color: #ffffff;
     border-radius: 10px;
     border-left: 5px solid green;
+    position: relative;
 
  }
 
@@ -259,8 +260,24 @@ button:hover{
     background-color:#ffffff;
     border-radius: 10px;
     border-left: 5px solid red;
+    position: relative;
 
  }
+
+ .expense-tracker .delete-btn {
+    position: absolute; 
+    top: 10px; 
+    right: 10px; 
+    background: none; 
+    border: none; 
+    font-size: 18px; 
+    cursor: pointer; 
+    color: #151313; 
+}
+
+.expense-tracker .delete-btn:hover {
+    color: red; 
+}
 
   
   
