--- a/FruityVice/style.css
+++ b/FruityVice/style.css
@@ -1,8 +1,6 @@
+/* ******--- FRUITY VICE--- ****** */
 
-
- /* ******--- FRUITY VICE--- ****** */
-
- body {
+body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     background: #a4debf;
@@ -76,6 +74,10 @@ button:hover {
     background-color: #388E3C;
 }
 
+#searchInput {
+    display: none;
+}
+
 #nutritionFields {
     display: none;
 }
@@ -116,7 +118,7 @@ button:hover {
     box-sizing: border-box;
 }
 
-.hello{
+.hello {
     width: 100px;
     height: 100px;
     border-radius: 90px;
@@ -131,6 +133,6 @@ button:hover {
     box-sizing: border-box;
 }
 
-img{
+img {
     border-radius: 30px;
 }
